# NYC-Opendata-Capital-Projects-MCP

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/: agencies.yaml  categories.yaml  data_dictionary.yaml  fms_agency_dim.tsv
docs/: FEATURES.md  index.html
docs/examples/: parks_over_50m.html  pid_fms_budget_analysis.html
exports/: .gitkeep
src/od_cpd/: __init__.py  agencies.py  categories.py  cli.py  config.py  data_dictionary.py  dbio.py  export.py  ingest.py  materialize.py  periods.py  primer.py  provenance.py  schema.py  server.py  socrata.py
src/od_cpd/tools/: _common.py  agency_scope.py  budget.py  inspect.py  lifecycle.py  lookup.py  portfolio.py  ranking.py  resolve.py  schedule.py  sql.py
tests/: smoke_test_socrata.py  test_agencies.py  test_agency_scope.py  test_budget_tools.py  test_categories.py  test_category_groupby.py  test_cli.py  test_common.py  test_config.py  test_data_dictionary.py  test_dbio.py  test_export.py  test_ingest.py  test_inspect.py  test_lifecycle.py  test_lookup.py  test_materialize_analytics.py  test_materialize_normalized.py  test_periods.py  test_portfolio.py  test_provenance.py  test_ranking.py  test_resolve.py  test_review_fixes.py  test_review_fixes_2.py  test_run_sql.py  test_schedule_tools.py  test_schema.py  test_server.py  test_server_tools.py  test_socrata.py
tests/evals/: README.md  test_golden_202601.py
